invoice-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: invoice-app
  template:
    metadata:
      labels:
        app: invoice-app
    spec:
      containers:
        - name: main
          image: invoice-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
      securityContext:
        runAsNonRoot: true
