invoice-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoice-app
spec:
  selector:
    app: invoice-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
